hphp/test/zend/good/ext/curl/tests/curl_close_basic.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!extension_loaded('curl')) print 'skip';
}
