hphp/test/zend/bad/ext/standard/tests/file/windows_acls/bug44859_3.php.skipif
<?php 
include_once __DIR__ . '/common.inc';
skipif();
?>